Bug 500718 - In panel edit mode, panel gets behind the "resize bar" when visibility is set to Autohide and width is set to Custom.
Summary: In panel edit mode, panel gets behind the "resize bar" when visibility is set...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-02-25 11:52 UTC by Jan Rathmann
Modified: 2025-03-14 00:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Panel partly overlapped by "resize bar". (683.06 KB, image/png)
2025-02-25 11:52 UTC, Jan Rathmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Rathmann 2025-02-25 11:52:41 UTC
Created attachment 178860 [details]
Panel partly overlapped by "resize bar".

SUMMARY
If a panel's visibility is set to "Autohide" and its width is set to "Custom", the panel will be partly hidden by the "resize bar" (the dark bar with white arrows to resize the panel) when entering edit mode of the panel. If the panel height is set to a small value, this can lead to almost the whole panel being invisible in edit mode.

STEPS TO REPRODUCE
1. Right click on a panel, enter edit mode.
2. Set visibility to "autohide", set width to "Custom"
3. Leave edit mode, then enter edit mode again.

OBSERVED RESULT
The panel is partly overlapped by the "resize bar", making it more or less difficult (depending on its height) to actually see the panel content. (see attached screenshot).

EXPECTED RESULT
The "resize bar" should be displayed somewhere beside the panel, leaving the panel uncovered, like in Plasma 6.3.

SOFTWARE/OS VERSIONS

Reproduced with:
* Self-build Plasma from master + Qt 6.8.2 on Kubuntu 24.10
* Neon unstable with Plasma 6.3.80

ADDITIONAL INFORMATION
This seems to be a recent regression, since I couldn't reproduce it with Plasma 6.3.1 (on Kubuntu 25.05-dev).
Comment 1 Filip 2025-02-25 12:16:47 UTC
Can confirm. Reproducible on master (compiled from source on 25Feb2025), but not on Plasma 6.3.1
Comment 2 Nate Graham 2025-02-27 00:10:02 UTC
Can also confirm on master.
Comment 3 Bug Janitor Service 2025-03-11 17:08:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5310
Comment 4 Niccolò Venerandi 2025-03-12 16:07:13 UTC
Git commit e95d2f81494b6bee9b7bd51e76781f6b614d9d78 by Niccolò Venerandi.
Committed on 12/03/2025 at 16:06.
Pushed by niccolove into branch 'master'.

Update exclusiveZone when entering edit mode

Previously, exclusiveZone would only be updated when exiting
edit mode, whereas we want to set it even when entering. Also,
the "0" value was left off from when the panels respected
exclusive zones, now their default value is -1.

M  +2    -2    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e95d2f81494b6bee9b7bd51e76781f6b614d9d78