Update exclusiveZone when entering edit mode

Previously, exclusiveZone would only be updated when exiting
edit mode, whereas we want to set it even when entering. Also,
the "0" value was left off from when the panels respected
exclusive zones, now their default value is -1.

BUG:500718